# intempo

./: .gitignore  CMakeLists.txt  README.md
examples/normal/: CMakeLists.txt  test.cpp
examples/quaternions/: CMakeLists.txt  test.cpp
install/: intempo-config.cmake  intempo.pc
intempo/: intempo.h
intempo/include/: TimeSignal.h
intempo/include/interpolation/: Interpolator.h  allmethods.h
intempo/include/interpolation/constant/: NearestNeighborInterpolator.h  SampleHoldInterpolator.h
intempo/include/interpolation/cubic/: Bezier.h  CSpline.h  CubicInterpolator.h
intempo/include/interpolation/linear/: LinearInterpolator.h
intempo/sources/: TimeSignal.hh
intempo/sources/interpolation/constant/: NearestNeighborInterpolator.hh  SampleHoldInterpolator.hh
intempo/sources/interpolation/cubic/: Bezier.hh  CSpline.hh  CubicInterpolator.hh
intempo/sources/interpolation/linear/: LinearInterpolator.hh
